# axum-jwt-auth

./: Cargo.toml  README.md
src/: lib.rs
src/claims/: mod.rs  traits.rs
src/config/: settings.rs
src/errors/: jwt_err.rs  mod.rs
src/middleware/: jwt_middleware.rs  mod.rs
src/token/: decoder.rs  encoder.rs  mod.rs
src/utils/: crypto.rs
