[package]
name = "axum-jwt-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
jsonwebtoken = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
http = "0.2"
chrono = "0.4.38"
async-trait = "0.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
rsa = "0.8"
config = "0.13"
futures = "0.3.31"
